Apply Java 17+ modernization to Headless & Streaming clients (#317)
## Summary
- Replace `Arrays.asList()` with `List.of()` across all MCP tool example
classes (~20 instances), removing unused `Arrays` imports
- Convert `getManaPoolCount()` and `prettyManaType()` switch statements
to switch expressions in BridgeCallbackHandler
- Use `var` for ~180 local variable declarations where the type is
immediately obvious from a constructor call on the RHS

## Test plan
- [x] `make check` passes (lint, typecheck, 249 Python tests, 46 JS
tests)
- [ ] Run a quick game with `make run` to verify no runtime regressions

🤖 Generated with [Claude Code](https://claude.com/claude-code)

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>